@@ -3,66 +3,67 @@ package com.example.expensetracker.service;
 import com.example.expensetracker.dto.AdminExpenseResponseDto;
 import com.example.expensetracker.dto.ExpenseRequestDto;
 import com.example.expensetracker.dto.ExpenseResponseDto;
+import com.example.expensetracker.exception.NotFoundException;
 import com.example.expensetracker.mapper.ExpenseMapper;
 import com.example.expensetracker.model.Expense;
 import com.example.expensetracker.model.User;
 import com.example.expensetracker.repository.ExpenseRepository;
-import com.example.expensetracker.repository.UserRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.example.expensetracker.mapper.ExpenseMapper.toDto;
 
 @Service
 public class ExpenseService {
 
     private final ExpenseRepository expenseRepository;
-    private final UserRepository userRepository;
+    private final CurrentUserService currentUserService;
+    private final AccessService accessService;
 
-    public ExpenseService(ExpenseRepository expenseRepository, UserRepository userRepository) {
+    public ExpenseService(ExpenseRepository expenseRepository,
+                          CurrentUserService currentUserService,
+                          AccessService accessService) {
         this.expenseRepository = expenseRepository;
-        this.userRepository = userRepository;
+        this.currentUserService = currentUserService;
+        this.accessService = accessService;
     }
 
-    public Expense createExpense(ExpenseRequestDto requestDto, String userEmail) {
-        User user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+    // ------------- CREATE -------------
 
-        Expense expense = new Expense(
-                requestDto.getTitle(),
-                requestDto.getAmount(),
-                requestDto.getCategory(),
-                requestDto.getDate() != null ? requestDto.getDate() : LocalDate.now(),
-                user
-        );
+    public ExpenseResponseDto createExpense(ExpenseRequestDto requestDto) {
+        User currentUser = currentUserService.getCurrentUser();
 
-        return expenseRepository.save(expense);
+        Expense expense = new Expense();
+        expense.setTitle(requestDto.getTitle());
+        expense.setAmount(requestDto.getAmount());
+        expense.setCategory(requestDto.getCategory());
+        expense.setDate(requestDto.getDate());
+        expense.setUser(currentUser);
+
+        expenseRepository.save(expense);
+
+        return toDto(expense);
     }
 
-    public List<ExpenseResponseDto> getAllExpensesForUser(String userEmail) {
-        User user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-        return expenseRepository.findByUser(user)
-                .stream()
-                .map(expense -> new ExpenseResponseDto(
-                        expense.getId(),
-                        expense.getTitle(),
-                        expense.getAmount(),
-                        expense.getDate(),
-                        expense.getCategory()
-                ))
-                .collect(Collectors.toList());
+    // ------------- READ -------------
+
+    public List<ExpenseResponseDto> getMyExpenses() {
+        User currentUser = currentUserService.getCurrentUser();
+        return expenseRepository.findByUser(currentUser).stream()
+                .map(ExpenseMapper::toDto)
+                .toList();
     }
 
     public List<AdminExpenseResponseDto> getAllExpensesForAdmin() {
-        return expenseRepository.findAll()
-                .stream()
+        return expenseRepository.findAll().stream()
                 .map(ExpenseMapper::toAdminDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Page<AdminExpenseResponseDto> getAllExpensesForAdmin(
@@ -87,6 +88,39 @@ public class ExpenseService {
 
         return expenseRepository.findAll(spec, pageable)
                 .map(ExpenseMapper::toAdminDto);
+    }
+
+    // ------------- UPDATE -------------
+
+    @Transactional
+    public ExpenseResponseDto updateExpense(Long id, ExpenseRequestDto expenseRequestDto) {
+        User currentUser = currentUserService.getCurrentUser();
+        Expense expense = expenseRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Expense not found"));
+
+        accessService.checkExpenseAccess(expense, currentUser);
+
+        expense.setTitle(expenseRequestDto.getTitle());
+        expense.setAmount(expenseRequestDto.getAmount());
+        expense.setCategory(expenseRequestDto.getCategory());
+        expense.setDate(expenseRequestDto.getDate());
+
+        expenseRepository.save(expense);
+
+        return toDto(expense);
+    }
+
+    // ------------- DELETE -------------
+
+    @Transactional
+    public void deleteExpense(Long id) {
+        User currentUser = currentUserService.getCurrentUser();
+        Expense expense = expenseRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Expense not found"));
+
+        accessService.checkExpenseAccess(expense, currentUser);
+
+        expenseRepository.delete(expense);
     }
 
 }
